# recsys2025_challenge

./: .gitmodules  README.md  flake.nix  micromamba_conf.txt  micromamba_conf_4.txt  pyproject.toml  shell.nix
src/: basic_stats.ipynb  gat.ipynb  generate_baseline.ipynb  main.ipynb  more_stats.ipynb  recsys2025.ipynb  recsys2025_local.ipynb  recsys2025_sat.ipynb  recsys2025_sat_local.ipynb  split_data.ipynb  train_test_split_stats.ipynb  validate_recsys.ipynb
src/embeds/: client_ids.npy  embeddings.npy
src/our_lib/: __init__.py  gat.py  recsys_cmds.py  recsys_data.py
