[project]
name = "adm_class_zmrocze"
version = "2020.0.0"
# description = "Lovely Spam! Wonderful Spam!"
# readme = "README.rst"
requires-python = ">=3.8"
# license = {file = "LICENSE.txt"}

dependencies = [
  "ipython",
  "ipykernel",
  "matplotlib",
  
  # "scipy",
  # "scikit-learn",
  # "optuna",
  # "tensorboard"
  # "jupyterlab-optuna",
  # "ucimlrepo",

  # recsys 2025 deps
  "numpy==2.1",
  "pandas==2.2.3",
  "pytorch_lightning==2.2.4",
  "torch==2.5",
  "torchmetrics==1.3.2",
  "tqdm==4.65.0",
  # "neptune", # karol: this also but can't get it on my distribution
  "rich",
  "pyarrow==19.0.1",
]
